<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_filters" android:checkableBehavior="all">
        <item android:id="@+id/filtro_playa" android:title="@string/playa"/>
        <item android:id="@+id/filtro_parque" android:title="@string/parque"/>
        <item android:id="@+id/filtro_area" android:title="@string/area_recreativa"/>
        <item android:id="@+id/filtro_picos" android:title="@string/picos"/>
        <item android:id="@+id/filtro_lago" android:title="@string/lago"/>
        <item android:id="@+id/filtro_rio" android:title="@string/rio"/>
    </group>

    <item
        android:id="@+id/btn_aplicar_filtros"
        android:title="@string/aplicar_filtros"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_limpiar_filtros"
        android:title="@string/limpiar_filtros"
        app:showAsAction="never" />
</menu>
