...
    <string name="modo_noche">Modo noche</string>
    <string name="modo_idioma">Cambiar idioma</string>
    <string name="playa">Playa</string>
    <string name="parque">Parque</string>
    <string name="area_recreativa">Área recreativa</string>
    <string name="picos">Picos</string>
    <string name="lago">Lago</string>
    <string name="rio">Río</string>
    <string name="filtros">Quitar filtros</string>
    <string name="aplicar_filtros">Aplicar</string>
    <string name="limpiar_filtros">Limpiar</string>
    <string name="titulo_filtros">Filtros</string>
    <string name="abrir_menu">Abrir menú</string>
...
