<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_espacios"
        android:icon="@drawable/ic_nature"
        android:title="@string/espacios" />

    <item
        android:id="@+id/nav_mapa"
        android:icon="@drawable/ic_map"
        android:title="@string/mapa" />

    <item
        android:id="@+id/favoritosFragment"
        android:icon="@drawable/ic_star"
        android:title="@string/favoritos" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/ajustes" />



</menu>
