...
            android:layout_height="wrap_content"
            android:text="Nombre del espacio"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnFavorito"
            android:maxLines="2"
            android:ellipsize="end" />

        <!-- Municipio o localidad -->
        <TextView
            android:id="@+id/tvMunicipio"
...
